--- a/client/index.html
+++ b/client/index.html
@@ -167,7 +167,7 @@
               <input type="date" name="checkout" id="checkout" required class="input-field">
             </div>
 
-            <button type="submit" class="btn btn-secondary">Найти</button>
+            <button type="submit" class="btn btn-secondary">Поиск</button>
 
           </form>
 
@@ -658,6 +658,140 @@
   <a href="#top" class="go-top" data-go-top>
     <ion-icon name="chevron-up-outline"></ion-icon>
   </a>
+
+  <!-- Модальное окно авторизации --> 
+  <div class="modal-overlay" id="modalOverlay">
+    <div class="modal" id="modal">
+      <div class="modal-content">
+        <h2 class="modal-title">Авторизация</h2>
+        <form class="modal-form" id="loginForm">
+          <div class="input-wrapper">
+            <label for="email" class="input-label">Электронная почта:</label>
+            <input type="email" id="email" class="input-field" placeholder="Введите имя пользователя" required>
+          </div>
+          <div class="input-wrapper">
+            <label for="password" class="input-label">Пароль:</label>
+            <input type="password" id="password" class="input-field" placeholder="Введите пароль" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Войти</button>
+        </form>
+        <button class="btn btn-primary" id="registerBtn">Зарегистрироваться</button>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Модальное окно регистрации -->
+<div class="modal-overlay" id="registerModalOverlay">
+  <div class="modal" id="registerModal">
+    <div class="modal-content">
+      <h2 class="modal-title">Регистрация</h2>
+      <form class="modal-form" id="registerForm">
+        <!-- Поля для регистрации -->
+        <div class="input-wrapper">
+          <label for="lastName" class="input-label">Фамилия:</label>
+          <input type="text" id="lastName" class="input-field" required>
+        </div>
+        <div class="input-wrapper">
+          <label for="firstName" class="input-label">Имя:</label>
+          <input type="text" id="firstName" class="input-field" required>
+        </div>
+        <div class="input-wrapper">
+          <label for="email" class="input-label">Электронная почта:</label>
+          <input type="email" id="email" class="input-field" required>
+        </div>
+        <div class="input-wrapper">
+          <label for="phone" class="input-label">Номер телефона:</label>
+          <input type="tel" id="phone" class="input-field" required>
+        </div>
+        <div class="input-wrapper">
+          <label for="password" class="input-label">Пароль:</label>
+          <input type="password" id="password" class="input-field" required>
+        </div>
+        <div class="input-wrapper">
+          <select name="roles" id="role-select">
+            <option value="client">Пользователь</option>
+            <option value="sales-manager">Менеджер по продажам</option>
+            <option value="content-manager">Контент-менеджер</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+      </form>
+      <button class="btn btn-primary" id="back-to-login">Назад</button>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal-overlay" id="profileModalOverlay">
+  <div class="modal" id="profileModal">
+    <div class="modal-content">
+      <h2 class="modal-title">Личный кабинет</h2>
+      <div class="modal-tabs">
+        <button class="modal-tab active" data-tab="personal">
+          <ion-icon name="person-outline"></ion-icon>
+        </button>
+        <button class="modal-tab" data-tab="orders">
+          <ion-icon name="cart-outline"></ion-icon>
+        </button>
+        <button class="modal-tab" data-tab="wallet">
+          <ion-icon name="wallet-outline"></ion-icon>
+        </button>
+      </div>
+      <div class="modal-tab-content active" id="personal-tab">
+        <form id="personalForm">
+          <div class="column">
+            <div class="input-wrapper">
+              <label for="lastName" class="input-label">Фамилия:</label>
+              <input type="text" class="input-field" id="lastName" name="lastName" required>
+            </div>
+            <div class="input-wrapper">
+              <label for="firstName" class="input-label" >Имя:</label>
+              <input type="text" class="input-field" id="firstName" name="firstName" required>
+            </div>
+            <div class="input-wrapper">
+              <label for="middleName" class="input-label" >Отчество:</label>
+              <input type="text" class="input-field" id="middleName" name="middleName">
+            </div>
+          </div>
+          <div class="column">
+            <div class="input-wrapper">
+              <label for="gender" class="input-label" >Пол:</label>
+              <select id="gender" name="gender">
+                <option value="male">Мужской</option>
+                <option value="female">Женский</option>
+              </select>
+            </div>
+            <div class="input-wrapper">
+              <label for="dob" class="input-label" >Дата рождения:</label>
+              <input type="date" class="input-field" id="dob" name="dob">
+            </div>
+            <div class="input-wrapper">
+              <label for="email" class="input-label" >Электронная почта:</label>
+              <input type="email" class="input-field" id="email" name="email" required>
+            </div>
+            <div class="input-wrapper">
+              <label for="phone" class="input-label" >Номер телефона:</label>
+              <input type="tel" class="input-field" id="phone" name="phone" required>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Сохранить</button>
+        </form>
+      </div>
+      <div class="modal-tab-content" id="orders-tab">
+        <p>Здесь будет содержимое вкладки "Заказы"</p>
+      </div>
+      <div class="modal-tab-content" id="wallet-tab">
+        <p>Здесь будет содержимое вкладки "Кошелек"</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  
+
+
 
   <script src="./assets/js/script.js"></script>
 
